@@ -24,7 +24,8 @@ SVN version
 [CHANGE] Made admins.lua a bit more idiot proof
 [CHANGE] Cooks can now buy food too when hungermod is off
 [CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
-[remove] The easter egg :(
+[REMOVE] The easter egg :(
+[REMOVE] the player possessor
 
 SVN VERSTION till 150/ 2.3.5:
 Updated by: FPtje Falco
